objects/Cota_regional__c.object
<CustomObject>
    <fields>
        <fullName>Bandeira__c</fullName>
        <formula>Criterio_regional_de_cota__r.Cota_nacional__r.Bandeira__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bandeira</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bandeira_referencia__c</fullName>
        <formula>IF( 
   NOT(ISBLANK(Criterio_regional_de_cota__r.Cota_nacional__r.Bandeira__c)),

   Criterio_regional_de_cota__r.Cota_nacional__r.Bandeira__c, 

     IF(
          NOT(ISBLANK(  Bandeira_regional__c )), Bandeira_regional__c ,NULL 
         )
    )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bandeira referência</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bandeira_regional__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bandeira regional</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>UDC__c.CodProd__c</field>
                <operation>equals</operation>
                <value>01</value>
            </filterItems>
            <filterItems>
                <field>UDC__c.CodUs__c</field>
                <operation>equals</operation>
                <value>06</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>UDC__c</referenceTo>
        <relationshipLabel>Cotas_regionais</relationshipLabel>
        <relationshipName>Cotas_regionais</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Canal__c</fullName>
        <formula>Criterio_regional_de_cota__r.Canal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Canal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cliente__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cliente</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cotas regionais</relationshipLabel>
        <relationshipName>Cotas_regionais</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Consumo_de_cota__c</fullName>
        <label>Consumo de cota (inativo)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cota__c</fullName>
        <label>Cota</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cota_utilizada__c</fullName>
        <label>Consumo de cota</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Criterio_regional_de_cota__c</fullName>
        <label>Critério regional de cota</label>
        <referenceTo>Criterio_de_cota_regional__c</referenceTo>
        <relationshipLabel>Cotas_regionais</relationshipLabel>
        <relationshipName>Cotas_regionais</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Executivo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Executivo</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Cotas regionais</relationshipLabel>
        <relationshipName>Cotas_regionais</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Nome_do_SKU__c</fullName>
        <formula>Criterio_regional_de_cota__r.Cota_nacional__r.Criterio_nacional_de_cota__r.SKU__r.Nome_do_produto__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nome do SKU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regional__c</fullName>
        <formula>Criterio_regional_de_cota__r.Regional__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Id Regional</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SKU__c</fullName>
        <formula>Criterio_regional_de_cota__r.SKU__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SKU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Saldo_de_cota__c</fullName>
        <formula>Cota__c - Cota_utilizada__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Saldo de cota</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sub_canal__c</fullName>
        <formula>Criterio_regional_de_cota__r.Sub_canal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub-canal</label>
        <type>Text</type>
    </fields>
    <label>Cota regional</label>
    <listViews>
        <fullName>Cotas_Regionais</fullName>
        <columns>NAME</columns>
        <columns>SKU__c</columns>
        <columns>Regional__c</columns>
        <columns>Canal__c</columns>
        <columns>Sub_canal__c</columns>
        <columns>Bandeira__c</columns>
        <columns>Bandeira_referencia__c</columns>
        <columns>Bandeira_regional__c</columns>
        <columns>Executivo__c</columns>
        <columns>Cliente__c</columns>
        <columns>Cota__c</columns>
        <columns>Cota_utilizada__c</columns>
        <columns>Saldo_de_cota__c</columns>
        <columns>Criterio_regional_de_cota__c</columns>
        <filterScope>Everything</filterScope>
        <label>Cotas Regionais</label>
        <language>pt_BR</language>
    </listViews>
    <nameField>
        <displayFormat>Cota Regional {0000}</displayFormat>
        <label>Número da Cota Regional</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cotas regionais</pluralLabel>
    <recordTypes>
        <fullName>BRA_Standard</fullName>
        <active>true</active>
        <description>Brazil standard record type</description>
        <label>BRA Standard</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Obriga_Bandeira_Regional</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
    Criterio_regional_de_cota__r.Bandeira_regional__c , 
    isblank( Bandeira_regional__c ))</errorConditionFormula>
        <errorDisplayField>Bandeira_regional__c</errorDisplayField>
        <errorMessage>O critério regional pai obriga o preenchimento da bandeira regional.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Obriga_Bandeira_Regional_Vazia</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
    Not(Criterio_regional_de_cota__r.Bandeira_regional__c ), 
    not(isblank( Bandeira_regional__c )))</errorConditionFormula>
        <errorDisplayField>Bandeira_regional__c</errorDisplayField>
        <errorMessage>O critério regional pai indica que esta cota não pode ter bandeira</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Valida_cliente_obrigatorio</fullName>
        <active>true</active>
        <errorConditionFormula>AND( Criterio_regional_de_cota__r.Cliente__c , isblank( Cliente__c ))</errorConditionFormula>
        <errorDisplayField>Cliente__c</errorDisplayField>
        <errorMessage>O critério de cota regional obriga o preenchimento do campo cliente.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Valida_cliente_vazio</fullName>
        <active>true</active>
        <errorConditionFormula>AND( not(Criterio_regional_de_cota__r.Cliente__c) , not(isblank( Cliente__c )))</errorConditionFormula>
        <errorDisplayField>Cliente__c</errorDisplayField>
        <errorMessage>O critério de cota regional obriga o campo cliente a ficar vazio.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Valida_executivo_obrigatorio</fullName>
        <active>true</active>
        <errorConditionFormula>AND( Criterio_regional_de_cota__r.Executivo__c , isblank( Executivo__c ))</errorConditionFormula>
        <errorDisplayField>Executivo__c</errorDisplayField>
        <errorMessage>O critério de cota regional obriga o preenchimento do campo executivo</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Valida_executivo_vazio</fullName>
        <active>true</active>
        <errorConditionFormula>AND( not( Criterio_regional_de_cota__r.Executivo__c ) , not(isblank( Executivo__c )))</errorConditionFormula>
        <errorDisplayField>Executivo__c</errorDisplayField>
        <errorMessage>O critério de cota regional obriga o campo executivo a ficar vazio.</errorMessage>
    </validationRules>
</CustomObject>